Added Form Validations for login and register

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
     <section class="container">
         <div class="login">
             <h3>Login</h3>
-            <form>
+            <form [formGroup]="loginForm">
                 <mat-card-actions>
                     <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button
                         color="primary">For
@@ -13,18 +13,18 @@
                 </mat-card-actions>
                 <mat-form-field class="first" appearance="standard">
                     <mat-label>Enter your email</mat-label>
-                    <input matInput placeholder="pat@example.com" [formControl]="email" required>
-                    <mat-error *ngIf="email.invalid">{{getEmailErrorMessage()}}</mat-error>
+                    <input formControlName="email" matInput placeholder="pat@example.com" required>
+                    <mat-error *ngIf="email.invalid">{{getEmailError()}}</mat-error>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="standard">
                     <mat-label>Enter your password</mat-label>
-                    <input matInput required [formControl]="password" [type]="hide ? 'password' : 'text'">
+                    <input formControlName="password" matInput required [type]="hide ? 'password' : 'text'">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
+                    <mat-error *ngIf="password.invalid">{{getPasswordError()}}</mat-error>
                 </mat-form-field>
                 <br>
                 <br>
