--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="register">
             <h3>Create a new Account</h3>
-            <form name="form" #f="ngForm">
+            <form [formGroup]="registerForm">
                 <mat-card-actions>
                     <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button
                         color="primary">For
@@ -13,39 +13,46 @@
                 </mat-card-actions>
                 <mat-form-field class="first" appearance="standard">
                     <mat-label>Enter your name</mat-label>
-                    <input [formControl]="password" matInput>
-                    <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
+                    <input matInput formControlName="name">
+                    <mat-error *ngIf="name.invalid && name.touched">Name is required
+                    </mat-error>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="standard">
                     <mat-label>Enter your email</mat-label>
-                    <input matInput placeholder="pat@example.com" [formControl]="email" required>
-                    <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                    <input matInput placeholder="pat@example.com" formControlName="email" required>
+                    <mat-error *ngIf="email.invalid && email.touched">{{getEmailError()}}
+                    </mat-error>
                 </mat-form-field>
                 <br>
-                <mat-form-field appearance="standard">
-                    <mat-label>Enter your password</mat-label>
-                    <input matInput [formControl]="password" [type]="hide ? 'password' : 'text'">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                    <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
-                </mat-form-field>
-                <br>
-                <mat-form-field appearance="standard">
-                    <mat-label>Confirm Password</mat-label>
-                    <input [formControl]="password" matInput [type]="hide ? 'password' : 'text'">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                        [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
-                    <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
-                </mat-form-field>
+                <div>
+                    <mat-form-field appearance="standard">
+                        <mat-label>Enter your password</mat-label>
+                        <input matInput formControlName="password" [type]="hide ? 'password' : 'text'">
+                        <button mat-icon-button matSuffix (click)="hide = !hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <mat-hint align="end">Min Length 8. At least 1 Uppercase, Lowercase and Number</mat-hint>
+                        <mat-error *ngIf="password.invalid && password.touched">{{getPasswordError()}}
+                        </mat-error>
+                    </mat-form-field>
+                    <br>
+                    <mat-form-field appearance="standard">
+                        <mat-label>Confirm Password</mat-label>
+                        <input formControlName="confirmPassword" matInput [type]="hide ? 'password' : 'text'">
+                        <button mat-icon-button matSuffix (click)="hide = !hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        </button>
+                        <mat-error *ngIf="confirmPassword.invalid && confirmPassword.touched">
+                            {{getConfirmPasswordError()}}
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+
                 <br>
                 <br>
                 <mat-card-actions>
-                    <button mat-raised-button type="submit" color="primary">REGISTER</button>
+                    <button (click)="register()" mat-raised-button type="submit" color="primary">REGISTER</button>
                     <br>
                     <br>
                     <button (click)="openLoginPage()" class="link" mat-button color="primary">Have an account? Login
