Fixed typos and css in login page

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -12,6 +12,15 @@ button {
     margin-left: 0 !important;
 }
 
+.mat-raised-button {
+    background-color: #001F3F;
+    color: white;
+}
+
+.mat-button {
+    color: #001F3F;
+}
+
 h3 {
     margin: 0 150px;
 }
