--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,11 +4,9 @@
             <h3>Login</h3>
             <form [formGroup]="loginForm">
                 <mat-card-actions>
-                    <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button
-                        color="primary">For
+                    <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button>For
                         Consumers</button>
-                    <button m={0} (click)="selectDoctor()" [class.mat-raised-button]="!consumer" mat-stroked-button
-                        color="primary">For
+                    <button m={0} (click)="selectDoctor()" [class.mat-raised-button]="!consumer" mat-stroked-button>For
                         Doctors</button>
                 </mat-card-actions>
                 <mat-form-field class="first" appearance="standard">
@@ -32,9 +30,9 @@
                     <button mat-raised-button type="submit" color="primary">LOGIN</button>
                     <br>
                     <br>
-                    <button class="link" mat-button color="primary">Forgot Password?</button>
+                    <button class="link" mat-button>Forgot Password?</button>
                     <br>
-                    <button (click)="openRegisterPage()" class="link" mat-button color="primary">New User? Register
+                    <button (click)="openRegisterPage()" class="link" mat-button>New User? Register
                         here</button>
                 </mat-card-actions>
             </form>
