--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,8 @@
                 <a href="#" mat-button><span class="menu-item">Health</span></a>
                 <a href="#" mat-button><span class="menu-item">Medicines</span></a>
                 <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
+                <a href="#" mat-button [routerLink]="['/insurance']"><span class="menu-item">Insurance</span></a>
+                <a href="#" mat-button [routerLink]="['/forum']"><span class="menu-item">Forum</span></a>
                 <a href="#" mat-button><span class="menu-item">Forum</span></a>
                 <button mat-button (click)="openLoginPage()">
                     <span class="menu-item">Login/Register</span>
@@ -26,6 +28,8 @@
             <a href="#" mat-button [routerLink]="['/']"><span class="menu-item">Home</span></a>
             <a href="#" mat-button><span class="menu-item">Health</span></a>
             <a href="#" mat-button><span class="menu-item">Medicines</span></a>
+            <a href="#" mat-button [routerLink]="['/insurance']"><span class="menu-item">Insurance</span></a>
+            <a href="#" mat-button [routerLink]="['/forum']"><span class="menu-item">Forum</span></a>
             <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
             <a href="#" mat-button><span class="menu-item">Forum</span></a>
             <button mat-icon-button (click)="openLoginPage()">
