--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,8 +8,11 @@
             <div fxLayout="column">
                 <a href="#" mat-button [routerLink]="['/']"><span class="menu-item">Home</span></a>
                 <a href="#" mat-button><span class="menu-item">Health</span></a>
-                <a href="#" mat-button><span class="menu-item">Medicines</span></a>
+                <a href="#" mat-button [routerLink]="['/orderMedicine']"><span class="menu-item">Medicines</span></a>
                 <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
+                <a href="#" mat-button [routerLink]="['/homeCare']"><span class="menu-item">Home Care</span></a>
+                <a href="#" mat-button [routerLink]="['/aboutUs']"><span class="menu-item">About Us</span></a>
+                <a href="#" mat-button [routerLink]="['/contactUs']"><span class="menu-item">Contact Us</span></a>
                 <a href="#" mat-button><span class="menu-item">Forum</span></a>
                 <button mat-button (click)="openLoginPage()">
                     <span class="menu-item">Login/Register</span>
@@ -21,17 +24,20 @@
             <mat-icon class="logo">local_hospital</mat-icon>
             <span class="logo">HEALTHHUB</span>
         </a>
+
         <span class="menu-spacer"></span>
         <div fxShow="true" fxLayout="row" fxHide.lt-md="true">
             <a href="#" mat-button [routerLink]="['/']"><span class="menu-item">Home</span></a>
             <a href="#" mat-button><span class="menu-item">Health</span></a>
-            <a href="#" mat-button><span class="menu-item">Medicines</span></a>
+            <a href="#" mat-button [routerLink]="['/orderMedicine']"><span class="menu-item">Medicines</span></a>
             <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
+            <a href="#" mat-button [routerLink]="['/homeCare']"><span class="menu-item">Home Care</span></a>
             <a href="#" mat-button><span class="menu-item">Forum</span></a>
+            <a href="#" mat-button [routerLink]="['/aboutUs']"><span class="menu-item">About Us</span></a>
+            <a href="#" mat-button [routerLink]="['/contactUs']"><span class="menu-item">Contact Us</span></a>
             <button mat-icon-button (click)="openLoginPage()">
                 <mat-icon>account_circle</mat-icon>
             </button>
         </div>
-
     </mat-toolbar>
 </div>
