--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,9 +6,9 @@
         </button>
         <mat-menu #belowMenu="matMenu" yPosition="below">
             <div fxLayout="column">
-                <a href="#" mat-button [routerLink]="['/']"><span class="menu-item">Home</span></a>
                 <a href="#" mat-button [routerLink]="['/blogs']"><span class="menu-item">Blogs</span></a>
-                <a href="#" mat-button [routerLink]="['/view-doctor-appointments']"><span class="menu-item">View Doctor Appointments</span></a>
+                <a href="#" mat-button [routerLink]="['/view-doctor-appointments']"><span
+                        class="menu-item">Appointments</span></a>
                 <a href="#" mat-button><span class="menu-item">Health</span></a>
                 <a href="#" mat-button><span class="menu-item">Medicines</span></a>
                 <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
@@ -27,9 +27,9 @@
         </a>
         <span class="menu-spacer"></span>
         <div fxShow="true" fxLayout="row" fxHide.lt-md="true">
-            <a href="#" mat-button [routerLink]="['/']"><span class="menu-item">Home</span></a>
             <a href="#" mat-button [routerLink]="['/blogs']"><span class="menu-item">Blogs</span></a>
-            <a href="#" mat-button [routerLink]="['/view-doctor-appointments']"><span class="menu-item">View Doctor Appointments</span></a>
+            <a href="#" mat-button [routerLink]="['/view-doctor-appointments']"><span
+                    class="menu-item">Appointments</span></a>
             <a href="#" mat-button><span class="menu-item">Health</span></a>
             <a href="#" mat-button><span class="menu-item">Medicines</span></a>
             <a href="#" mat-button [routerLink]="['/insurance']"><span class="menu-item">Insurance</span></a>
