Edit-Profile page is created.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,6 +11,7 @@
                 <a href="#" mat-button><span class="menu-item">Medicines</span></a>
                 <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
                 <a href="#" mat-button><span class="menu-item">Forum</span></a>
+                <a href="#" mat-button [routerLink]="['/edit-profile']"><span class="menu-item">Edit Profile</span></a>
                 <button mat-button (click)="openLoginPage()">
                     <span class="menu-item">Login/Register</span>
                 </button>
@@ -28,6 +29,7 @@
             <a href="#" mat-button><span class="menu-item">Medicines</span></a>
             <a href="#" mat-button [routerLink]="['/consult']"><span class="menu-item">Consult</span></a>
             <a href="#" mat-button><span class="menu-item">Forum</span></a>
+            <a href="#" mat-button [routerLink]="['/edit-profile']"><span class="menu-item">Edit Profile</span></a>
             <button mat-icon-button (click)="openLoginPage()">
                 <mat-icon>account_circle</mat-icon>
             </button>
