--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,59 +1,59 @@
+<div class="footer">
 
-    <div  class="footer">
-
-        <div id="row">
-            <div class="container">
-    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-        <div class="row justify-content-center">
-        <a href="#">About Us</a>
-        </div>
-        <div class="row justify-content-center">
-        <a href="#">Contact Us</a>
-        </div>
-        <div class="row justify-content-center">
-        <a href="#">Privacy Policy</a>
-        </div>
-        <div class="row justify-content-center">
-        <a href="#">Terms and Conditions</a>
-        </div>
-        <div class="row justify-content-center">
-            <img src="./assets/google.png">
-          &nbsp;
-            <img src="./assets/apple.png">
-
-        </div>
-
-    </div>
-    <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-            <div class="row justify-content-center">
-                   <h4>Our Associates</h4>
-                    </div>
-                    <div class="row justify-content-center">
-                    <a href="#">Link A</a>
-                    </div>
-                    <div class="row justify-content-center">
-                    <a href="#">Link B</a>
-                    </div>
-                    <div class="row justify-content-center">
-                    <a href="#">Link C</a>
-                    </div>
-            
-        </div>
-        <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+    <div id="row">
+        <div class="container">
+            <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div class="row justify-content-center">
-                        <h4>Latest Blog</h4>
-                         </div>
-                         <div class="row justify-content-center">
-                <h5>Covid 19</h5>
-                         </div>
-                         <div class="row justify-content-center">
-                         <p style="font-size:13px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et nulla arcu. Nullam vitae mauris facilisis, pharetra arcu a, porttitor diam.</p>
-                         </div>
-                         <div class="row justify-content-center">
-                         <a id="footer-button" class="waves-effect waves-light btn">View More</a>
-                         </div>
-                 
-                
+                    <a href="#" [routerLink]="['/aboutUs']">About Us</a>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#" [routerLink]="['/contactUs']">Contact Us</a>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#">Privacy Policy</a>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#">Terms and Conditions</a>
+                </div>
+                <div class="row justify-content-center">
+                    <img src="./assets/google.png">
+                    &nbsp;
+                    <img src="./assets/apple.png">
+
+                </div>
+
+            </div>
+            <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                <div class="row justify-content-center">
+                    <h4>Our Associates</h4>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#">Link A</a>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#">Link B</a>
+                </div>
+                <div class="row justify-content-center">
+                    <a href="#">Link C</a>
+                </div>
+
+            </div>
+            <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                <div class="row justify-content-center">
+                    <h4>Latest Blog</h4>
+                </div>
+                <div class="row justify-content-center">
+                    <h5>Covid 19</h5>
+                </div>
+                <div class="row justify-content-center">
+                    <p style="font-size:13px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et nulla
+                        arcu. Nullam vitae mauris facilisis, pharetra arcu a, porttitor diam.</p>
+                </div>
+                <div class="row justify-content-center">
+                    <a id="footer-button" class="waves-effect waves-light btn">View More</a>
+                </div>
+
+
             </div>
             <div style="margin-top:20px" class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <div class="row justify-content-center">
@@ -61,49 +61,49 @@
                 </div>
                 <div class="row justify-content-center">
 
-                        <a  id="social-row"  href="#" class="fa fa-facebook"></a>
-                        <a id="social-row" href="#" class="fa fa-twitter"></a>
-                        <a id="social-row" href="#" class="fa fa-instagram"></a>
-                        <a id="social-row" href="#" class="fa fa-youtube"></a>
-                    
+                    <a id="social-row" href="#" class="fa fa-facebook"></a>
+                    <a id="social-row" href="#" class="fa fa-twitter"></a>
+                    <a id="social-row" href="#" class="fa fa-instagram"></a>
+                    <a id="social-row" href="#" class="fa fa-youtube"></a>
+
                 </div>
-                </div>
-</div>
-</div>
+            </div>
+        </div>
+    </div>
 
 
 
 
-<style>
+    <style>
+        .fa {
+            font-size: 25px;
 
-.fa{
-    font-size: 25px;
 
-   
-}
-#social-row{
-    padding-left:5px;
-    padding-right:5px;
-}
+        }
 
-    a{
-        color: white;
-        font-size:18px; 
-        font-weight:500;
-        text-decoration: underline;
-    }
+        #social-row {
+            padding-left: 5px;
+            padding-right: 5px;
+        }
 
-    #footer-button{
-        margin-top: -15px;
-        background: black;
-    color:white;
-    font-weight: 400;
-    border-radius: 15px 1px 15px 1px;
-    }
+        a {
+            color: white;
+            font-size: 18px;
+            font-weight: 500;
+            text-decoration: underline;
+        }
 
-    #row{
-        
-        margin-bottom: 0px;
+        #footer-button {
+            margin-top: -15px;
+            background: black;
+            color: white;
+            font-weight: 400;
+            border-radius: 15px 1px 15px 1px;
+        }
 
-    }
-</style>
+        #row {
+
+            margin-bottom: 0px;
+
+        }
+    </style>
