--- a/src/app/components/blogshome/blogshome.component.html
+++ b/src/app/components/blogshome/blogshome.component.html
@@ -24,7 +24,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color:#fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -51,7 +51,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -78,7 +78,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -105,7 +105,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -132,7 +132,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -159,7 +159,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -186,7 +186,7 @@
         <mat-card-actions>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
-          <button mat-raised-button style="background-color:#001F3F; color: #fef8f2;">View Full Blog</button>
+          <button mat-stroked-button style="background-color:#001F3F; color: #fef8f2;" (click)="viewBlog()">View Full Blog</button>
         </mat-card-actions>
       </mat-card>
     </div>
