--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,3 @@
 .footer{
-    bottom:0; 
-    background:cadetblue;
-     color:white;
-      font-size:17px;
-       font-weight:500;
+    background-color:#09335e;
 }
