--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,115 +1,272 @@
-body{
-    width: 100%;
-    overflow-x: hidden;
-    margin: 0 auto;
-}
-
-.example-card {
-    max-width: 180px;
-}
-
-.mat-card-image{
-    max-width: 180px;
-    max-height: 100px;
-    object-fit: cover;
-}
-
-.example-header-image {
-    background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
-    background-size: cover;
-}
-
-.type-container{
-    width: 80%;
-    margin: 0 auto;
-}
-
-.search-container{
-    width: fit-content;
-    margin: 10px auto;
-}
-
-.mat-paginator-range-label {
-    display: none !important;
-}
-
-.card-header {
-    margin: 0 !important;
-    padding: 0 !important;
-    background-color: white;
-}
-:host /deep/ .mat-card-header-text{
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-mat-card-title {
-    font-size: 80% !important;
-    width: 120px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis !important;
-}
-
-.scroll-container{
-    overflow-x: auto;
-}
-
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #001F3F #F5F5F5;
-}
-
-/* Works on Chrome/Edge/Safari */
-*::-webkit-scrollbar {
-  width: 12px;
-}
-*::-webkit-scrollbar-track {
-  background: #F5F5F5;
-  border-radius: 20px;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: #001F3F;
-  border-radius: 20px;
-  border: 3px solid #F5F5F5;
-}
-
-
-
-mat-grid-list {
-    flex-direction: row;
-}
-
-mat-card {
-    float: left;
-    margin: 10px;
-}
-mat-paginator {
-    float: left;
-}
-
-.mat-icon-button {
-    background-color: #001F3F;
-    color: white;
-}
-
-.mat-raised-button {
-    background-color: #001F3F;
-    color: white;
+#button{
+    background: #ffe743;
+    border: 4px solid #001F3F;
+    color: black;
+    font-size: 28px;
+    font-weight: 600;
+  
+    font-family:Helvetica;
     height: fit-content;
-    width: fit-content;
-    margin: auto 0;
-    padding: 0 !important;
+    transition: transform .2s;
+    border-radius: 18px 1px 18px 1px;
 }
 
-h5 {
-    margin: 0;
+h1{
+  font-weight: 600;
 }
 
-mat-icon {
-    transform: scale(0.9) !important;
+#button:hover{
+  transform: scale(1.1);
 }
 
-.consult-section{
-    background-color: #457b9d;
+.section-0{
+  margin-top: 150px;
+}  
+.carousel{
+height: fit-content;
+}
+
+.section-3{
+margin-top: 130px;
+padding-left:20px;
+padding-right:20px;
+
+}
+
+
+#nursing-image{
+  height: 300px;
+}
+
+
+
+
+/* .card{
+transform: translate3d(-1056px, 0px, 0px);
+    transition: all 0s ease 0s;
+    width: 3872px;
+} */
+
+
+.section-4{
+  margin-top: 100px;
+}
+
+#image-1{
+  transform: unset;
+}
+.container-fluid{
+
+  padding: 40px;
+  
+}
+
+#doctor-card{
+  border-radius: 25px;
+  border: 1px solid grey;
+  border-bottom: 7px solid #001F3F;
+}
+
+#image-2{
+  padding: 15px;
+}
+
+.content-5{
+  padding: 15px;
+}
+
+/* .container{
+  text-align: center;
+  align-items: center;
+  align-self: center;
+} */
+
+#content1{
+
+  position: absolute;
+  padding-top: 70px;
+  font-family: Arial;
+     
+  
+     
+}
+.card{
+  background-image: linear-gradient( #001F3F, #001F3F );
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: 0% 100%;
+  transition: background-size .5s, color .5s;
+  border-bottom: 6px solid #001F3F;
+   
+  
+
+    
+  
+    vertical-align: middle;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  
+  
+
+}
+
+.card:hover{
+  
+  background-size: 100% 100%;
+  color: #fff; 
+
+}
+
+
+
+#content2{
+  position: absolute;
+  padding-top: 80px;
+  font-family: Arial;
+
+}
+
+#content3{
+  position: absolute;
+  padding-top: 80px;
+  font-family: Arial;
+  padding-left: 890px;
+ 
+   
+}
+
+#heading{
+  color: black;
+font-size: 35px;
+  font-weight: 800;
+  
+
+}
+
+
+
+
+#section-2{
+  margin-top: 130px;
+}
+
+
+.container{
+  text-align: center;
+  align-content: center;
+  align-self: center;
+  
+}
+
+#para{
+  font-size: 17px;
+  font-weight: 500px;
+}
+#doctor-image{
+  padding: 1px;
+  border-radius: 25px;
+}
+
+#image{
+  min-height: 500px;
+}
+
+
+#hello{
+    background:#ffe743;
+    border: 4px solid #001F3F;
+    color: black;
+    font-size: 24px;
+    font-weight: 800;
+
+    
+    font-family:Helvetica;
+    height: fit-content;
+    transition: transform .2s;
+    border-radius: 18px 1px 18px 1px;
+}
+
+hello:hover{
+  transform: scale(1.5);
+}
+
+#nursing-button{
+  transform: scale(1.1);
+}
+#nursing-button{
+    transition: transform .2s;
+    background: #ffe743;
+    border: 4px solid #001F3F;
+    color: black;
+    font-size: 24px;
+    font-weight: 600;
+    width: 410px;
+    font-family:Helvetica;
+    height: fit-content;
+
+    border-radius: 18px 1px 18px 1px;
+
+}
+
+#read-more{
+
+    background: #ffe743;
+        border: 4px solid #001F3F;;
+        color: black;
+  
+        font-weight: 600;
+     
+        font-family:Helvetica;
+        height: fit-content;
+        transition: transform .2s;
+        border-radius: 18px 1px 18px 1px;
+    
+}
+
+#read-more:hover{
+  transform: scale(1.1);
+}
+.flip-card {
+  background-color: transparent;
+ height: 100%;
+ width:100%;
+  border: 1px solid #f1f1f1;
+
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 600%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
 }
