--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="parent">
     <div class="container">
         <div class="register">
-            <h3>Register</h3>
+            <h3>Create a new Account</h3>
             <mat-card-actions>
                 <button (click)="selectConsumer()" [class.mat-raised-button]="consumer" mat-stroked-button>For
                     Consumers</button>
@@ -32,7 +32,7 @@
                         <button mat-icon-button matSuffix (click)="hide = !hide">
                             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
-                        <mat-hint align="end">Min Length 8. At least 1 Uppercase, Lowercase and Number</mat-hint>
+                        <mat-hint align="end">Min Length 8. At least 1 Uppercase</mat-hint>
                         <mat-error *ngIf="password.invalid">{{getPasswordError()}}
                         </mat-error>
                     </mat-form-field>
