--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -40,9 +40,35 @@ div {
 }
 
 .mat-button:hover {
-  color: #fef8f2;
-  text-decoration: none;
   box-shadow: 1px 1px wheat;
   
  }
+
+ .notifications{
+   margin-left: 20px;
+   
+ }
+
+ .notificationMenu{
+   max-height: 250px !important;
+   overflow-y: scroll;
+ }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #001F3F #fff;
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 20px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #001F3F;
+  border-radius: 20px;
+  border: 3px solid #fff;
+}
 
