added search in orderMedicine

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -20,14 +20,14 @@
             <br>
             <p>COVID Medicines</p>
             <p>Trending Medicines</p>
-            <p>Order Medicines Online</p>
+            <p><a routerLink="/orderMedicine">Medicines Online</a></p>
           </div>
           <div class="col-sm">
             <h1>About Us</h1>
             <br>
             <p><a routerLink="/forum">Check online Forum</a></p>
-            <p>Contact Us</p>
-            <p>About HealthCare</p>
+            <p><a routerLink="/contactUs">Contact Us</a></p>
+            <p><a routerLink="/aboutUs">About HealthHub</a></p>
           </div>
         </div>
       </div>
