--- a/src/app/components/home-care/home-care.component.html
+++ b/src/app/components/home-care/home-care.component.html
@@ -17,7 +17,8 @@
             </div>
             <div>
                 <br><br>
-                <img src="https://lh3.googleusercontent.com/proxy/pYuLu4Lt0tZnX5YvOd8-UsMO-k5KspYkZoHxIpNZzbVkwqZD5uH6io2kRuXkaInvAXzoiuKSqmKTkkd9fMRjYwS3WjmWEoyCfldNwml_eFHGoqQly7bMps7wsQ" alt="">
+                <img src="https://lh3.googleusercontent.com/proxy/W30w9xG4E3yBt-uAKGIRJk_JgUCWbP8bNJwsc8xRulXabYxhP9Uf05-Jb2s0DfFSJNEQgqRq9Qf0-XhD5MxNF5RDNN9g0LuDf_EvK-HxdrqRIrwGAalD-zXtKA" 
+                alt="">
             </div>
         </div>
         <br>
