--- a/src/app/components/medicine-delivery/medicine-delivery.component.html
+++ b/src/app/components/medicine-delivery/medicine-delivery.component.html
@@ -4,8 +4,25 @@
         <img src="https://d.newsweek.com/en/full/1541364/prescription-pills.jpg" width="100%" height="350px">
         <br>
         <div class="custom-tab">
+            <h2>Upload your medical prescription here</h2>
+            <form [formGroup]="stateForm">
+                <mat-form-field class="example-full-width">
+                    <input type="text"
+                           matInput
+                           placeholder="Enter Pharmacy name"
+                           formControlName="stateGroup"
+                           required
+                           [matAutocomplete]="autoGroup">
+                      <mat-autocomplete #autoGroup="matAutocomplete">
+                        <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
+                          <mat-option *ngFor="let name of group.names" [value]="name">
+                            {{name}}
+                          </mat-option>
+                      </mat-optgroup>
+                    </mat-autocomplete>
+                  </mat-form-field>
+            </form>
             <form (ngSubmit)="onSubmit()" [formGroup]="formPersonalRecord">
-                <h2>Upload your medical prescription here</h2>
                 <div class="row parentCss content-center">
                     <div>
                         <mat-form-field>
@@ -30,19 +47,17 @@
                     <div>
                         <mat-form-field>
                             <mat-label>Postal Code</mat-label>
-                            <input matInput formControlName="postalCode" 
-                            required>
+                            <input matInput formControlName="postalCode" required>
                             <mat-error>
                                 Please provide postal code of 6 chararcters.
                             </mat-error>
                         </mat-form-field>
                     </div>
                     <div>
-                        <mat-form-field class="example-full-width">
+                        <mat-form-field>
                             <mat-label>Mobile Number</mat-label>
-                            <input type="tel" matInput formControlName="mobileNumber" 
-                            required 
-                            placeholder="902-555-1234">
+                            <input type="tel" matInput formControlName="mobileNumber" required
+                                placeholder="902-555-1234">
                             <mat-error>
                                 Please provide a 10-digit mobile number.
                             </mat-error>
@@ -54,7 +69,7 @@
                         <label for="uploadPrescription" class="text-style">Upload Prescription File*</label>
                     </div>
                     <div>
-                        <input id="uploadPrescription" type="file"/>
+                        <input id="uploadPrescription" type="file" />
                     </div>
                 </div>
                 <br>
@@ -63,8 +78,7 @@
                     <textarea matInput></textarea>
                 </mat-form-field>
                 <br>
-                <button type="submit" mat-raised-button 
-                [disabled]="!formPersonalRecord.valid">
+                <button type="submit" mat-raised-button [disabled]="!formPersonalRecord.valid">
                     Submit
                 </button>
             </form>
