--- a/src/app/components/medicine-delivery/medicine-delivery.component.html
+++ b/src/app/components/medicine-delivery/medicine-delivery.component.html
@@ -4,23 +4,19 @@
         <img src="https://d.newsweek.com/en/full/1541364/prescription-pills.jpg" width="100%" height="350px">
         <br>
         <div class="custom-tab">
-            <h2>Upload your medical prescription here</h2>
+            <h2>Enter your order details and prescription here</h2>
             <form [formGroup]="formPersonalRecord">
                 <mat-form-field class="example-full-width">
-                    <input type="text"
-                           matInput
-                           placeholder="Enter Pharmacy name"
-                           formControlName="pharmacyName"
-                           required
-                           [matAutocomplete]="autoGroup">
-                      <mat-autocomplete #autoGroup="matAutocomplete">
+                    <input type="text" matInput placeholder="Enter Pharmacy name" formControlName="pharmacyName"
+                        required [matAutocomplete]="autoGroup">
+                    <mat-autocomplete #autoGroup="matAutocomplete">
                         <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
-                          <mat-option *ngFor="let name of group.names" [value]="name">
-                            {{name}}
-                          </mat-option>
-                      </mat-optgroup>
+                            <mat-option *ngFor="let name of group.names" [value]="name">
+                                {{name}}
+                            </mat-option>
+                        </mat-optgroup>
                     </mat-autocomplete>
-                  </mat-form-field>
+                </mat-form-field>
             </form>
             <form (ngSubmit)="onSubmit($event)" [formGroup]="formPersonalRecord">
                 <div class="row parentCss content-center">
@@ -66,11 +62,10 @@
                 </div>
                 <div class="row parentCss " style="justify-content: center;">
                     <div>
-                        <label for="uploadPrescription" class="text-style">Upload Prescription File</label>
-                    </div>
-                    <div>
-                        <input id="uploadPrescription" type="file" />
-                    </div>
+                        <label for="uploadPrescription" class="text-style">Upload Prescription File*</label>
+                        <input id="uploadPrescription" formControlName="prescriptionFile" type="file"
+                            (change)="onFileChange($event)" required #fileInput/>
+                        </div>
                 </div>
                 <br>
                 <mat-form-field class="myTextArea">
